# ganker

./: .gitignore  AGENTS.md  README.md  pyproject.toml
architecture/: distributed-modal.md  local-testing.md  overview.md  sampling-sglang.md
examples/: __init__.py  tiny_sft.jsonl
examples/sft/: __init__.py  code_data.py  data.py  loop.py  real_data.py
modal_apps/: distributed_mesh.py  megatron_smoke.py  remote_mesh.py  sft.py  sglang_smoke.py
modal_apps/distributed/: __init__.py  infra.py  sft_job.py
modal_apps/qwen_large_model_parallel_sft/: README.md  __init__.py  sft.py
modal_apps/qwen_model_parallel_sft/: README.md  __init__.py  (+1 more)
plans/: rfc-0001-megatron-bridge-support.md  rfc-0002-modal-megatron-gpu-testing.md  rfc-0003-megatron-runtime-lifecycle.md  rfc-0004-small-dataset-sft.md  rfc-0005-qwen-bridge-sft.md  rfc-0006-controlled-bridge-lora-safetensors.md  rfc-0007-distributed-monarch-orchestration.md  rfc-0008-modal-distributed-controller-orchestration.md  rfc-0009-modal-multinode-sft.md  rfc-0010-model-parallel-sft.md
scripts/: megatron_bridge_smoke.py
tests/: test_artifacts.py  test_backends.py  test_client.py  test_code_sft_data.py  test_components.py  test_contracts.py  test_distributed_monarch.py  test_distributed_orchestration.py  test_distributed_registry.py  test_distributed_sft.py  test_distributed_torchrun.py  test_grpc_transport.py  test_import_isolation.py  test_megatron_cpu.py  test_modal_smoke_scripts.py  test_monarch_orchestration.py  test_rpc_conversion.py  test_sft_data.py  test_sft_loop.py  test_sglang_backend.py  test_telemetry.py
(+55 files in other folders)
