[project]
name = "ganker"
version = "0.1.0"
description = "Local singleton Tinker-style Monarch prototype."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "grpcio>=1.81.1",
    "protobuf>=6.33.6",
    "torchmonarch>=0.5.0",
]

[dependency-groups]
dev = [
    "grpcio-tools>=1.81.1",
    "modal>=1.5.0",
    "pyright>=1.1.410",
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.15.18",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["src", "."]
testpaths = ["tests"]
markers = [
    "megatron_cpu: CPU-only Megatron Bridge adapter preflight tests",
    "megatron: GPU-backed Megatron Bridge functional tests",
]
